--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Silbiger Family Tree</title>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self';">
   <link rel="stylesheet" href="/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -177,28 +176,28 @@
           <form action="https://formspree.io/f/xyyrzdbn" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
               <label for="firstName" class="form-label">First Name:</label>
-              <input type="text" class="form-control" id="contactFirstName" name="firstName" required>
+              <input type="text" class="form-control" id="firstName" name="firstName" required>
               <div class="invalid-feedback">
                 Please enter your first name.
               </div>
             </div>
             <div class="mb-3">
               <label for="lastName" class="form-label">Last Name:</label>
-              <input type="text" class="form-control" id="contactLastName" name="lastName" required>
+              <input type="text" class="form-control" id="lastName" name="lastName" required>
               <div class="invalid-feedback">
                 Please enter your last name.
               </div>
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Your email:</label>
-              <input type="email" class="form-control" id="contactEmail" name="email" required>
+              <input type="email" class="form-control" id="email" name="email" required>
               <div class="invalid-feedback">
                 Please enter a valid email address.
               </div>
             </div>
             <div class="mb-3">
               <label for="message" class="form-label">Your message:</label>
-              <textarea class="form-control" id="contactMessage" name="message" rows="4" required></textarea>
+              <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
               <div class="invalid-feedback">
                 Please enter your message.
               </div>
