--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Silbiger Family Tree</title>
   <link rel="stylesheet" href="/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha384-abc" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
@@ -142,7 +142,7 @@
             
             <form id="searchForm" class="">
                 <div class="form-group mb-3">
-                <input type="text" class="form-control" id="searchFirstName" name="searchFirstName" placeholder="Enter a first name here">
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter a first name here">
                 </div>
                 <button type="submit" class="btn btn-dark w-100">Search</button>
                 <button type="reset" class="btn btn-dark w-100 mt-2" id="clearButton">Clear</button>
@@ -174,29 +174,29 @@
         <div class="modal-body">
           <form action="https://formspree.io/f/xyyrzdbn" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
-              <label for="contactFirstName" class="form-label">First Name:</label>
-              <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" required>
+              <label for="firstName" class="form-label">First Name:</label>
+              <input type="text" class="form-control" id="contactFirstName" name="firstName" required>
               <div class="invalid-feedback">
                 Please enter your first name.
               </div>
             </div>
             <div class="mb-3">
-              <label for="contactLastName" class="form-label">Last Name:</label>
-              <input type="text" class="form-control" id="contactLastName" name="contactLastName" required>
+              <label for="lastName" class="form-label">Last Name:</label>
+              <input type="text" class="form-control" id="contactLastName" name="lastName" required>
               <div class="invalid-feedback">
                 Please enter your last name.
               </div>
             </div>
             <div class="mb-3">
-              <label for="contactEmail" class="form-label">Your email:</label>
-              <input type="email" class="form-control" id="contactEmail" name="contactEmail" required>
+              <label for="email" class="form-label">Your email:</label>
+              <input type="email" class="form-control" id="contactEmail" name="email" required>
               <div class="invalid-feedback">
                 Please enter a valid email address.
               </div>
             </div>
             <div class="mb-3">
-              <label for="contactMessage" class="form-label">Your message:</label>
-              <textarea class="form-control" id="contactMessage" name="contactMessage" rows="4" required></textarea>
+              <label for="message" class="form-label">Your message:</label>
+              <textarea class="form-control" id="contactMessage" name="message" rows="4" required></textarea>
               <div class="invalid-feedback">
                 Please enter your message.
               </div>
@@ -230,29 +230,7 @@
     © 2024 Justin Ze'ev Silbiger. All rights reserved.
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js" integrity="sha384-abc" crossorigin="anonymous"></script>
   <script src="script.js"></script>
-  <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function () {
-      'use strict'
-
-      // Fetch all the forms we want to apply custom Bootstrap validation styles to
-      var forms = document.querySelectorAll('.needs-validation')
-
-      // Loop over them and prevent submission
-      Array.prototype.slice.call(forms)
-        .forEach(function (form) {
-          form.addEventListener('submit', function (event) {
-            if (!form.checkValidity()) {
-              event.preventDefault()
-              event.stopPropagation()
-            }
-
-            form.classList.add('was-validated')
-          }, false)
-        })
-    })()
-  </script>
 </body>
 </html>
