--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
           <h5 class="text-uppercase">Silbiger Family Database</h5>
-          <p class="text-dark">The Silbiger Family Database continues the work of my father, Jeffrey Jacob Silbiger, and Miroslav (Silbiger) Siba in preserving our family's history. It's an easy way for us to keep track of our family's stories and connections, ensuring that future generations can enjoy and remember our heritage.</p>
+          <p class="text-dark">The Silbiger Family Database continues the work of my father, Jeffrey Jacob Silbiger, and our cousin Miroslav (Silbiger) Siba in preserving our family's history. This database provides an easy way for us to keep track of our family's stories and connections, ensuring that future generations can enjoy and remember our heritage.</p>
         </div>
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0 mt-4 mt-lg-0">
           <h5 class="text-uppercase">Contact</h5>
